[package]
name = "relabs"
version = "0.1.0"
edition = "2024"
description = "Type-safe relative/absolute path wrappers."
license = "MIT"
keywords = ["paths", "filesystem", "validation", "type-sysyem"]
categories = ["rust-patterns", "filesystem", "os"]
repository = "https://github.com/fbinkert/relabs"
authors = ["Fabian Binkert <fabian.binkert@gmail.com>"]

[dependencies]
